--- a/style.css
+++ b/style.css
@@ -44,10 +44,18 @@
         border-radius:50%;}
         section #partners .partner img{width:90px;height:90px;}
     /*footer*/
-    footer{width:100%;height:155px; padding-bottom:lem; background-color:#ecfab8;font-family: Arial, Helvetica, sans-serif;}
+    footer{width:100%;height:155px; padding-bottom:1em; background-color:#ecfab8;font-family: Arial, Helvetica, sans-serif;}
 
-    footer #nondisclaimer .copy{padding:3.5em 3.5em 3.5em 13em; float:left; font-size:0.9em;}
-    footer #nondisclaimer .social{padding: 2.5em; margin-right:9.25em; float:right;}
+    footer #nondisclaimer .copy{
+        padding:3.5em 3.5em 3.5em 13em; 
+        float:left; 
+        font-size:0.9em;
+    }
+    footer #nondisclaimer .social{
+        padding: 2.5em; 
+        margin-right:9.25em; 
+        float:right;
+    }
 
     footer #disclaimer{clear: both;}
     footer #disclaimer p{font-size: 0.85em; text-align: center;}
