--- a/style.css
+++ b/style.css
@@ -146,3 +146,21 @@ button {
 button:hover {
     background-color: #2b5a8a;
 }
+
+/*Timeclock*/
+#timeofday{
+    height: 60px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    background:linear-gradient(0deg, rgba(251,215,139,1) 0%, rgba(118,213,245,1) 100%);
+    color:#3a3a3a
+}
+#timeofday span:first-child{
+    color:#125688
+}
+#clock{
+    color:#125688
+    margin-left:10px;
+}
