--- a/style.css
+++ b/style.css
@@ -37,12 +37,44 @@
         padding-bottom: 16px;margin-left:80px;}
        
     /* partners*/
-        section{width:100%; background-color:#4288c3;}
-        section #partners{width:1200px;padding:2em 0 2em 0;margin:0 auto; text-align:center;}
-        section #partners .partner{display:inline-block; margin: 0 0.75em; padding: 1.3em 1.5em;
-        background-color:#fff;
-        border-radius:50%;}
-        section #partners .partner img{width:90px;height:90px;}
+        section{
+            width:100%; 
+            background-color:#4288c3;
+        }
+        section #partners{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 1em; /* Adjust spacing between images */
+            padding: 2em 0;
+            list-style: none;
+            /*width:1200px;
+            padding:2em 0 2em 0;
+            margin:0 auto; 
+            text-align:center;*/
+        }
+        section #partners .partner{
+            background-color: #fff;
+            border-radius: 50%;
+            padding: 1em;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 120px;
+            height:120px;
+            overflow:hidden;
+            /*display:inline-block; 
+            margin: 0 0.75em; 
+            padding: 1.3em 1.5em;
+            background-color:#fff;
+            border-radius:50%;*/
+        }
+        section #partners .partner img{
+            width:90px;
+            height:90px;
+            object-fit: cover;
+            border-radius: 50%;
+        }
     /*footer*/
     footer{width:100%;height:155px; padding-bottom:1em; background-color:#ecfab8;font-family: Arial, Helvetica, sans-serif;}
 
@@ -155,12 +187,11 @@ button:hover {
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     background:linear-gradient(0deg, rgba(251,215,139,1) 0%, rgba(118,213,245,1) 100%);
-    color:#3a3a3a
+    color:#125688
 }
 #timeofday span:first-child{
-    color:#125688
+    color:#3a3a3a
 }
 #clock{
-    color:#125688
     margin-left:10px;
 }
