--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
         #home header{background:no-repeat lightgrey url(images/cliff_ocean.jpg);background-size:1500px;}
         #activities header{background:no-repeat lightgrey url(images/runfly.jpg);background-size:1500px;}
         #contact header{background:no-repeat lightgrey url(images/cliff_rock.jpg);background-size:1500px;}
+        #cliffs header{background:no-repeat lightgrey url(images/forest_cliff.jpg);background-size:1500px;}
 
         .mainheader{background-color:rgb(255,255,255,0.8);width:700px;margin:2em auto 0 auto; min-height:100px;height:100px;}
         .mainheader .logo img{width:100px;height:100px;margin:0 5em 0 0; float:left;}
@@ -177,6 +178,43 @@ button {
 
 button:hover {
     background-color: #2b5a8a;
+}
+
+/*Cliffs page*/
+#cliffphotos {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+}
+
+.cliffphoto {
+    width: 40%; /* Shrink to 40% of original size */
+    list-style: none;
+    margin: 1%; /* Adjust spacing between items */
+    box-sizing: border-box;
+    position: relative; /* Enable absolute positioning within */
+}
+
+.cliffphoto img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.cliffphoto-title {
+    position: absolute;
+    top: 0; /* Position at the top of the image */
+    left: 0;
+    width: 100%;
+    background-color: rgba(149, 0, 0, 0.8); /* Semi-transparent background */
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
+    text-align: center;
+    padding: 10px 0; /* Padding for spacing */
+    box-sizing: border-box;
 }
 
 /*Timeclock*/
