added js files for contact page

--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ input[type="tel"]{
 
 select{width:160px;}
 
-textarea{display:block; height:640px; width:60%;}
+textarea{display:block; height: 80px; width:60%;}
 
 input[type="radio"] {
     margin-right: 6px;}
@@ -166,8 +166,30 @@ input[type="radio"] {
     margin-bottom: 20px;
 }
 
+.randomcode {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.randomcode input[type="text"] {
+    width: 15%; 
+    padding: 10px;
+    margin-right: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+#codes {
+    background-color: #e0e0e0;
+    padding: 10px 10px;
+    border-radius: 4px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+}
+
 button {
-    background-color: #4288c3;
+    /*background-color: #4288c3;*/
     color: white;
     padding: 10px 20px;
     border: none;
