added box in actvity page

--- a/style.css
+++ b/style.css
@@ -116,6 +116,33 @@ th,td{width:225px;height:75px;vertical-align:middle; border: solid 1px #852b1b;}
 th:first-child{width:125px; height:50px; background:#4977d1; color:#ffff;}
 td:first-child{font-weight:bold; background:#bde1ff;}
 
+#activities main #displaySelected{
+    visibility:hidden;
+    margin:0 auto;
+    width:600px;
+    border:2px solid yellowgreen;
+    padding:0.75em;
+}
+#activities main #displaySelected #result, #activities main #displaySElected #sendinfo{
+    display:inline-block;
+    margin:0;
+}
+#activities main #result{
+    min-height:50px;
+    width:300px;
+    padding:0;
+}
+#actvities main #result h4{
+    margin-bottom:1em;
+    font-size:1.15em;
+}
+#activities main #displaySelected #sendinfo input[type="email"]{
+    width:200px;
+}
+/* Highlight selected cells */
+.selected {
+    background-color:greenyellow;
+}
 /*Contact Page*/
 .contacttext1{font-family: Arial, Helvetica, sans-serif; padding-left:80px;}
 .contacttext2{font-family: Arial, Helvetica, sans-serif; padding-left:80px;}
