not perfect, need more tryings

--- a/styles2.css
+++ b/styles2.css
@@ -5,38 +5,38 @@ header {
     padding-top: 3em;
 }
 #home header {
-    background:  no-repeat lightgrey url(images/cliff_ocean.jpg);
-    background-size: 1500px;
+    background: no-repeat lightgrey url(images/cliff_ocean.jpg);
+    background-size: cover;
 }
 .main-header {
-    background-color:rgb(255, 255, 255, 0.8) ;
-    width: 700px;
-    margin: 2em auto 0 auto;
-    min-height: 100px;
-    height: 100px;
+    background-color: rgba(255, 255, 255, 0.8);
+    width: 100%;
+    padding: 1em;
 }
 .main-header .logo img {
     width: 100px;
     height: 100px;
-    margin: 0 2em 0 0;
-    float: left;
 }
 
 /* Navigation */
-.main-menu {
-    margin-left: 227px;
-    font-weight: 400;
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'><path stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg>");
+}
+
+.main-menu ul {
+    padding-left: 0;
 }
 .main-menu ul li {
     list-style-type: none;
     display: inline-block;
-    float: left;
     padding-left: 25px;
     padding-right: 25px;
     border-left: 1px solid rgba(202, 204, 202, 0.6);
-    line-height: 100px;
     text-transform: uppercase;
     font-size: 14px;
+}
+.main-menu ul li:first-child {
+    border-left: none;
 }
 .main-menu ul li a {
     text-decoration: none;
@@ -55,9 +55,9 @@ header {
 
 /* Main */
 main {
-    padding: 3em 6em 3em 5.5em;
+    padding: 3em 0;
     margin: 2em 0;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 main h1 {
     font-size: 2.5em;
@@ -67,26 +67,29 @@ main h1 {
 main h2 {
     font-size: 1.7em;
 }
+.content-box {
+    border: 1px solid #ccc;
+    padding: 1em;
+    margin-bottom: 1em;
+}
 
 /* Partners */
 section {
     width: 100%;
     background-color: #4288C3;
+    padding: 2em 0;
 }
-section #partners {  
-    width: 1200px;
-    padding: 2em 0 2em 0;
-    margin: 0 auto;
+#partners .partner {
+    margin-bottom: 1em;
     text-align: center;
 }
-section #partners .partner {
-    display: inline-block;
-    margin: 0 0.75em;
-    padding: 1.3em 1.5em;
+.partner-img-wrapper {
     background-color: #fff;
     border-radius: 50%;
+    padding: 1.3em;
+    display: inline-block;
 }
-section #partners .partner img {
+.partner-img-wrapper img {
     width: 90px;
     height: 90px;
 }
@@ -94,27 +97,15 @@ section #partners .partner img {
 /* Footer */
 footer {
     width: 100%;
-    height: 155px;
-    padding-bottom: 1em;
+    padding: 1em 0;
     background-color: #ecfab8;
 }
+footer #nondisclaimer {
+    margin-bottom: 1em;
+}
 footer #nondisclaimer .copy {
-    padding: 3.5em 3.5em 3.5em 13em;
-    float: left;
+    padding: 1.5em 0;
     font-size: 0.9em;
-}
-footer #nondisclaimer .social {
-    padding: 2.5em;
-    margin-right: 9.25em;
-    float: right;
-}
-footer #disclaimer {
-    clear: both;
-}
-
-footer #disclaimer p {
-    font-size: 0.85em;
-    text-align: center;
 }
 footer #nondisclaimer .social .fa {
     padding: 15px;
@@ -132,60 +123,56 @@ footer #nondisclaimer .social .fa-facebook {
     background: #3B5998;
     color: white;
 }
-    
 footer #nondisclaimer .social .fa-twitter {
     background: #55ACEE;
     color: white;
 }
-
 footer #nondisclaimer .social .fa-instagram {
     background: #125688;
     color: white;
 }
-
-/* Home */
-
-
-
-/* ACTIVATE BELOW WHEN TESTING NAVIGATION AND OTHERS FOR RWD */
-
-/* Media Queries */
-/*@media (max-width: 768px) {
-    footer #nondisclaimer .copy {
-        padding: 3.5em 0em 3.5em 0em;
-        text-align: center;
-        float: none;
-        font-size: 0.9em;
-      }
-      footer #nondisclaimer .social {
-        padding: 2.5em 0;
-        margin: 0;
-        text-align: center;
-        float: none;
-      }
+footer #disclaimer p {
+    font-size: 0.85em;
 }
 
-@media (max-width: 992px) {
-    .logo img {
-        position: relative;
-        bottom: 8px;
+/* Media Queries */
+@media (max-width: 768px) {
+    footer #nondisclaimer .copy {
+        padding: 1.5em 0;
+        text-align: center;
+        font-size: 0.9em;
     }
+    footer #nondisclaimer .social {
+        text-align: center;
+        padding: 1.5em 0;
+    }
+}
+@media (max-width: 992px) {
     .main-menu {
-        width: 200px;
-        background-color:rgb(255, 255, 255);
-        position: absolute;
-        right: 1.7em;
-      }
-      .main-menu ul li {
+        width: 100%;
+        text-align: center;
+    }
+    .main-menu ul li {
+        display: block;
         border-bottom: 1px solid rgba(202, 204, 202, 0.6);
-      }
-      main {
-        padding: 3em 1em 3em 1em;
-        margin: 0;
-      }
-      #home .main-col-content {
-        padding: 25px;
-        min-height: 450px;
-        margin-top: 1em;
-      }
-} */
+        padding: 10px 0;
+    }
+    .main-menu ul li a {
+        padding: 10px 0;
+        display: block;
+    }
+    .navbar-toggler {
+        display: block;
+    }
+    .navbar-collapse {
+        display: none !important;
+    }
+}
+@media (min-width: 993px) {
+    .navbar-toggler {
+        display: none;
+    }
+    .navbar-collapse {
+        display: flex !important;
+    }
+}
